Updated template and dependencies (#410)
* Implemented #408 and #409
* Updated plugin versions in maven templates
* replaced Paths.get() by Path.of()
* Enhanced TemplateUpdater to support updating plugins in PK's pom file, too
* updated vscode settings template
* Fixed vulnerability in XML DocumentBuilderFactory