@@ -8,7 +8,6 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Set;
 
@@ -30,13 +29,13 @@ class ProjectKeeperConfigTest {
                                 "parentRelativePath"))
                         .build()))
                 .excludes(List.of("exclude1")).linkReplacements(List.of("linkReplacement1"))
-                .versionConfig(new ProjectKeeperConfig.VersionFromSource(Paths.get("version-pom.xml"))).build();
+                .versionConfig(new ProjectKeeperConfig.VersionFromSource(Path.of("version-pom.xml"))).build();
         assertAll(() -> assertThat(config.getExcludes(), contains("exclude1")),
                 () -> assertThat(config.getLinkReplacements(), contains("linkReplacement1")),
                 () -> assertThat(config.getVersionConfig(), instanceOf(VersionFromSource.class)),
                 () -> assertThat(config.getSources(), hasSize(1)),
                 () -> assertThat(config.getSources().get(0).getType(), equalTo(SourceType.MAVEN)),
-                () -> assertThat(config.getSources().get(0).getPath(), equalTo(Paths.get("pom.xml"))),
+                () -> assertThat(config.getSources().get(0).getPath(), equalTo(Path.of("pom.xml"))),
                 () -> assertThat(config.getSources().get(0).getModules(), equalTo(Set.of(ProjectKeeperModule.DEFAULT))),
                 () -> assertThat(config.getSources().get(0).getParentPom().getGroupId(), equalTo("parentGroupId")),
                 () -> assertThat(config.getSources().get(0).getParentPom().getArtifactId(),
@@ -49,7 +48,7 @@ class ProjectKeeperConfigTest {
     @Test
     void versionFromSourceAcceptsVisitor() {
         final Visitor visitor = mock(Visitor.class);
-        final VersionFromSource version = new ProjectKeeperConfig.VersionFromSource(Paths.get("pom.xml"));
+        final VersionFromSource version = new ProjectKeeperConfig.VersionFromSource(Path.of("pom.xml"));
         version.accept(visitor);
         verify(visitor).visit(same(version));
     }
